WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106559
Serialization of Gradients fails when PlatformContextSkia is not bitmap backed
https://bugs.webkit.org/show_bug.cgi?id=106559
Summary
Serialization of Gradients fails when PlatformContextSkia is not bitmap backed
Robert Phillips
Reported
2013-01-10 06:26:04 PST
Chromium possesses the ability to serialize web pages when using the Skia backend. During serialization PlatformContextSkia is not bitmap backed. The prior code improperly digs into the Skia device object to determine the appropriate bitmap format. Since the Skia device is not bitmap backed it returns a kNo_Config flag. This causes a cascade of problems resulting in gradients not being serialized.
Attachments
Patch
(1.79 KB, patch)
2013-01-10 06:44 PST
,
Robert Phillips
no flags
Details
Formatted Diff
Diff
Patch
(1.80 KB, patch)
2013-01-10 07:56 PST
,
Robert Phillips
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert Phillips
Comment 1
2013-01-10 06:44:17 PST
Created
attachment 182127
[details]
Patch
Stephen White
Comment 2
2013-01-10 06:46:18 PST
Comment on
attachment 182127
[details]
Patch Looks good, bots willing. r=me
WebKit Review Bot
Comment 3
2013-01-10 06:53:36 PST
Comment on
attachment 182127
[details]
Patch
Attachment 182127
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/15758987
Peter Beverloo (cr-android ews)
Comment 4
2013-01-10 07:06:46 PST
Comment on
attachment 182127
[details]
Patch
Attachment 182127
[details]
did not pass cr-android-ews (chromium-android): Output:
http://queues.webkit.org/results/15766847
Robert Phillips
Comment 5
2013-01-10 07:56:49 PST
Created
attachment 182138
[details]
Patch
Robert Phillips
Comment 6
2013-01-10 07:57:48 PST
Made a dumb mistake copying the change from my Windows Chromium tree to my Mac Webkit tree.
Stephen White
Comment 7
2013-01-10 08:44:41 PST
Comment on
attachment 182138
[details]
Patch OK. r=me
WebKit Review Bot
Comment 8
2013-01-10 08:50:02 PST
Comment on
attachment 182138
[details]
Patch Clearing flags on attachment: 182138 Committed
r139322
: <
http://trac.webkit.org/changeset/139322
>
WebKit Review Bot
Comment 9
2013-01-10 08:50:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug