Serialization of Gradients fails when PlatformContextSkia is not bitmap backed https://bugs.webkit.org/show_bug.cgi?id=106559

Patch by Robert Phillips <robertphillips@chromium.org> on 2013-01-10
Reviewed by Stephen White.

This patch switches over from having platform/Skia improperly
crack open the device to find the bitmap configuration to just
specifying it directly.

No new tests. This bug is Chromium specific and only occurs in a
debugging tool (when serializing to a Skia-specific file format).

* platform/graphics/skia/PlatformContextSkia.cpp:
(WebCore::PlatformContextSkia::createCompatibleDevice):

Canonical link: https://commits.webkit.org/124767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139322 268f45cc-cd09-0410-ab3c-d52691b4dbfc