Source/WebCore/platform/graphics/skia/PlatformContextSkia.cpp
@@ -224,7 +224,7 @@ void PlatformContextSkia::setDrawingToImageBuffer(bool value)
 
 SkDevice* PlatformContextSkia::createCompatibleDevice(const IntSize& size, bool hasAlpha)
 {
-    return m_canvas->createCompatibleDevice(bitmap()->config(), size.width(), size.height(), !hasAlpha);
+    return m_canvas->createCompatibleDevice(SkBitmap::kARGB_8888_Config, size.width(), size.height(), !hasAlpha);
 }
 
 bool PlatformContextSkia::isDrawingToImageBuffer() const
